# CNC-PEN-PLOTTER

./: .gitignore  Cargo.toml  README.md  desen.gcode  nucleo_stm32u535re-q.avif  sender.py
examples/: adc.rs  blinky.rs  bmp280_i2c.rs  i2c.rs  i2c_async.rs  mpu6500_spi.rs  pwm.rs  servo.rs  spi.rs  spi_async.rs  usb.rs
host/: main.py
src/: main.rs
